--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@ body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 i{
-    font-size: 1.15em;
+    font-size: 1.1em;
     font-weight: 500;
-    font-family: 'STIX Two Math', sans-serif;
+    font-family: 'KaTeX_Main', serif;
 }
-math *{
+#math-output{
+    text-align: center;
     font-weight: 500;
-    font-family: 'STIX Two Math', sans-serif;
+    margin: 3px 0px;
+}
+p{
+    margin: 0;
 }
 th, td {
     padding: 5px 10px;
