--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
 body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.1rem;
 }
 i{
-    font-size: 1.1em;
+    font-size: 1.13em;
     font-weight: 500;
     font-family: 'KaTeX_Main', serif;
 }
 #math-output{
     text-align: center;
+    font-size: 1.13rem;
     font-weight: 500;
     margin: 3px 0px;
 }
-p{
+p, ul{
     margin: 0;
 }
 th, td {
