--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ th, td {
     border: 1px solid #ccc;
 }
 table {
-    width: 90vw;
+    width: 90%;
     border-collapse: collapse;
     margin: 10px auto;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
