--- a/style.css
+++ b/style.css
@@ -3,18 +3,31 @@ body {
     font-size: 1.1rem;
 }
 i{
-    font-size: 1.13em;
-    font-weight: 500;
+    font-size: 1.15em;
+    font-weight: 400;
     font-family: 'KaTeX_Main', serif;
+}
+b{
+    font-weight: 500;
 }
 #math-output{
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.18rem;
     font-weight: 500;
     margin: 3px 0px;
 }
-p, ul{
+p, ul, ol{
     margin: 0px 0px 5px 0px;
+}
+ul {
+    list-style-type: none; 
+    padding-left: 1.5em; 
+}
+ul li::before {
+    content: "\2022";
+    color: #000000; 
+    font-size: 1.2em; 
+    margin-right: 0.5em; 
 }
 .subtema-height{
     width: 25%;
