--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1rem;
+    text-align: justify;
+}
+h2{
+    text-align: center;
+    margin: 15px;
 }
 i{
     font-size: 1.15em;
@@ -76,4 +81,9 @@ pre{
     background-color: #ccc;
     width: 60%;
     border-radius: 10px;
+}
+.sec-table, .sec-table *{
+    padding: 1px 0%;
+    margin: 0%;
+    border: 0px;
 }
